<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="navigation_calendar">캘린더</string>
    <string name="navigation_character">캐릭터</string>
    <string name="navigation_shop">상점</string>
    <string name="navigation_compendium">도감</string>
    <string name="navigation_settings">설정</string>

    <string name="settings_title">설정</string>
    <string name="settings_battle_sfx_label">효과음</string>
    <string name="settings_state_on">켜짐</string>
    <string name="settings_state_off">꺼짐</string>
...
    <string name="settings_notification_permission_action_request">권한 허용</string>
    <string name="settings_notification_permission_action_open_channel">알림 채널 설정</string>
    <string name="settings_notification_permission_action_retry">다시 시도</string>
    <string name="settings_notification_permission_semantics">%1$s, %2$s, %3$s</string>

    <string name="compendium_title">도감</string>
    <string name="compendium_monster_category">몬스터</string>
    <string name="monster_compendium_title">몬스터 도감</string>
    <string name="monster_compendium_loading">몬스터 도감을 불러오는 중</string>
    <string name="monster_compendium_error">몬스터 도감을 불러오지 못했습니다.</string>
    <string name="monster_compendium_retry">다시 시도</string>
    <string name="monster_compendium_back">뒤로</string>
    <string name="monster_compendium_undiscovered">미발견</string>
    <string name="monster_compendium_undiscovered_description">%1$s, 미발견</string>
    <string name="monster_compendium_collection_label">발견한 몬스터</string>
    <string name="monster_compendium_collection_count">%1$d / %2$d</string>
    <string name="monster_compendium_collection_percent">수집률 %1$d%%</string>
    <string name="monster_compendium_collection_description">발견한 몬스터 %1$d / %2$d, 수집률 %3$d%%</string>
    <string name="monster_compendium_search">몬스터 검색</string>
    <string name="monster_compendium_search_hint">몬스터 이름 검색</string>
    <string name="monster_compendium_search_clear">검색어 지우기</string>
    <string name="monster_compendium_search_close">검색 닫기</string>
    <string name="monster_compendium_filter_all">전체</string>
    <string name="monster_compendium_filter_discovered">발견</string>
    <string name="monster_compendium_filter_undiscovered">미발견</string>
    <string name="monster_compendium_locked_title">미발견 몬스터</string>
    <string name="monster_compendium_locked_preview_message">아직 발견한 몬스터가 없습니다</string>
    <string name="monster_compendium_locked_question">\?</string>
    <string name="monster_compendium_locked_symbol">\?\?\?</string>
    <string name="monster_compendium_lock_description">잠김</string>
    <string name="monster_compendium_locked_card_description">미발견 몬스터</string>
    <string name="monster_compendium_undiscovered_notice">아직 발견하지 못한 몬스터입니다</string>
    <string name="monster_compendium_preview_description">%1$s, 발견 완료, 상세 보기</string>
    <string name="monster_compendium_discovered_complete">발견 완료</string>
    <string name="monster_compendium_detail_close">몬스터 상세 닫기</string>
    <string name="monster_compendium_empty_catalog">등록된 몬스터가 없습니다</string>
    <string name="monster_compendium_empty_results">검색과 필터에 맞는 몬스터가 없습니다</string>
    <string name="monster_compendium_reset_filters">필터 초기화</string>
    <string name="monster_compendium_goblin_scout_description">뾰족한 귀와 붉은 눈, 낡은 장비와 단검이 특징인 정찰병입니다.</string>
    <string name="monster_compendium_skeleton_soldier_description">큰 해골과 낡은 투구, 검과 붉은 눈이 특징인 해골 병사입니다.</string>
    <string name="monster_compendium_corrupted_tree_spirit_description">왕관처럼 뻗은 가지와 뿌리발, 부패 균열과 검은 수액이 특징인 타락한 나무 정령입니다.</string>
    <string name="monster_compendium_harpy_description">좌우로 펼친 날개와 짧은 다리, 날카로운 발톱과 붉은 눈이 특징인 하피입니다.</string>
    <string name="monster_compendium_slime_description">낮은 물방울 모양의 몸과 붉은 눈, 몸속 핵과 표면 하이라이트가 특징인 슬라임입니다.</string>

    <string name="battle_loading_description">전투 지도를 불러오는 중</string>
    <string name="battle_unavailable_description">전투 지도를 표시할 수 없습니다.</string>
    <string name="battle_player_name">모험가</string>
    <string name="battle_monster_goblin_scout_name">고블린 정찰병</string>
    <string name="battle_monster_skeleton_soldier_name">해골 병사</string>
    <string name="battle_monster_corrupted_tree_spirit_name">타락한 나무 정령</string>
    <string name="battle_monster_harpy_name">하피</string>
    <string name="battle_monster_slime_name">슬라임</string>
    <string name="battle_unit_health_description">%1$s, 체력 %2$d/%3$d</string>
    <string name="battle_player_progress_loading_description">플레이어 정보를 불러오는 중</string>
    <string name="battle_player_progress_level">Lv. %1$s</string>
    <string name="battle_player_progress_exp_label">EXP</string>
    <string name="battle_player_progress_exp_value">%1$s/%2$s</string>
    <string name="battle_player_progress_gold_description">골드 %1$s</string>
...
